--- a/app/src/main/res/layout/item_dial.xml
+++ b/app/src/main/res/layout/item_dial.xml
@@ -33,9 +33,9 @@
         android:layout_height="30dp"
         android:layout_gravity="end|center_vertical"
         android:background="@drawable/btn_choice_add"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="40dp"
         android:layout_marginBottom="5dp"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
