--- a/app/src/main/res/layout/page_send_message.xml
+++ b/app/src/main/res/layout/page_send_message.xml
@@ -3,10 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <SearchView
+            android:id="@+id/sv_search_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ddd"/>
+        <FrameLayout
+            android:id="@+id/fl_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/tv_search_choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:textSize="18sp"
+                android:textColor="#111"
+                android:layout_gravity="center_vertical"/>
+            <Button
+                android:id="@+id/btn_search_choice"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end|center_vertical"
+                android:background="@drawable/btn_choice_add"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="visible"/>
+        </FrameLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_choice_contacts"
             android:layout_width="match_parent"
@@ -14,53 +45,71 @@
             android:background="#eee">
         </android.support.v7.widget.RecyclerView>
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imageView6"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            app:srcCompat="@color/cardview_shadow_start_color" />
-
+            android:layout_height="1sp"
+            app:srcCompat="@android:color/black" />
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_contacts"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
         </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/edit_page"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            android:orientation="vertical"
+            android:visibility="visible">
+            <Button
+                android:id="@+id/hide_edit"
+                android:layout_width="220dp"
+                android:layout_height="10dp"
+                android:layout_marginTop="2dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/button_hide_edit" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="1sp"
+                app:srcCompat="@android:color/darker_gray" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="#fff"
+                android:hint="输入内容..." />
+        </LinearLayout>
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fbtn_send_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="35dp"
+        android:src="@drawable/fbutton_send_message"
+        android:visibility="gone"
+        app:backgroundTint="#fff"
+        app:rippleColor="#aaa"
+        app:fabSize="mini"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/show_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="15dp"
-        android:src="@drawable/button_show_dial"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="35dp"
+        android:src="@drawable/button_write_message"
         app:backgroundTint="#fff"
         app:rippleColor="#aaa"
-        app:fabSize="mini" />
+        app:fabSize="mini"/>
 
-    <LinearLayout
-        android:id="@+id/edit_page"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:background="#fff"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/hide_edit"
-            android:layout_width="220dp"
-            android:layout_height="13dp"
-            android:layout_marginBottom="5dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_hide_edit" />
-
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="#fff"
-            android:hint="输入内容..." />
-    </LinearLayout>
 </FrameLayout>
