短信群发页逻辑代码完善。

--- a/app/src/main/res/layout/item_dial.xml
+++ b/app/src/main/res/layout/item_dial.xml
@@ -35,7 +35,7 @@
         android:background="@drawable/btn_choice_add"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="5dp"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
