更改短信群发页，选择联系人方式。

--- a/app/src/main/res/layout/page_dial.xml
+++ b/app/src/main/res/layout/page_dial.xml
@@ -61,7 +61,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:background="#eee"
+                android:background="#fff"
                 android:focusable="false"
                 android:textColor="#111"
                 android:textSize="35sp" />
@@ -99,6 +99,7 @@
                     android:id="@+id/two"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="2"
                     android:textColor="#334"
@@ -108,6 +109,7 @@
                     android:id="@+id/three"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="3"
                     android:textColor="#334"
@@ -132,6 +134,7 @@
                     android:id="@+id/five"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="5"
                     android:textColor="#334"
@@ -141,6 +144,7 @@
                     android:id="@+id/six"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="6"
                     android:textColor="#334"
@@ -165,6 +169,7 @@
                     android:id="@+id/eight"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="8"
                     android:textColor="#334"
@@ -174,6 +179,7 @@
                     android:id="@+id/nine"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="9"
                     android:textColor="#334"
@@ -198,6 +204,7 @@
                     android:id="@+id/zero"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="0"
                     android:textColor="#334"
@@ -207,6 +214,7 @@
                     android:id="@+id/jin"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
+                    android:layout_margin="1dp"
                     android:background="#fff"
                     android:text="#"
                     android:textColor="#334"
