--- a/app/src/main/res/layout/page_send_message.xml
+++ b/app/src/main/res/layout/page_send_message.xml
@@ -56,7 +56,12 @@
             android:layout_height="match_parent"
             android:visibility="visible">
         </android.support.v7.widget.RecyclerView>
-
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_search_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+        </android.support.v7.widget.RecyclerView>
         <LinearLayout
             android:id="@+id/edit_page"
             android:layout_width="match_parent"
