--- a/app/src/main/res/layout/page_contacts_list.xml
+++ b/app/src/main/res/layout/page_contacts_list.xml
@@ -68,8 +68,7 @@
                     android:orientation="vertical"
                     android:paddingBottom="5dp"
                     android:paddingLeft="3dp"
-                    android:paddingRight="3dp"
-                    android:layout_marginTop="50dp">
+                    android:paddingRight="3dp">
 
                 </LinearLayout>
             </LinearLayout>
