--- a/app/src/main/res/layout/item_dial.xml
+++ b/app/src/main/res/layout/item_dial.xml
@@ -47,7 +47,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="30dp"
                 android:background="@drawable/btn_choice_not"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_surname"
